--- a/model_files/phdUMSSM/FlexibleSUSY.m.in
+++ b/model_files/phdUMSSM/FlexibleSUSY.m.in
@@ -100,3 +100,5 @@ InitialGuessAtHighScale = {};
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda] vS / Sqrt[2];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
