do not count FSInert as LSP, because it is always massless

--- a/model_files/phdE6SSM/FlexibleSUSY.m.in
+++ b/model_files/phdE6SSM/FlexibleSUSY.m.in
@@ -110,4 +110,5 @@ InitialGuessAtHighScale = {};
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda]3 vS / Sqrt[2];
 
-PotentialLSPParticles = { Chi, Cha, Glu, ChiInert, ChaInert, FSInert, FX, ChiPrime, ChaPrime, Sv, Su, Sd, Se, SX, SH0Inert, SHpInert, SS0Inert, SH0Prime, SHpPrime };
+(* Note: FSInert is always massless in this model file *)
+PotentialLSPParticles = { Chi, Cha, Glu, ChiInert, ChaInert, FX, ChiPrime, ChaPrime, Sv, Su, Sd, Se, SX, SH0Inert, SHpInert, SS0Inert, SH0Prime, SHpPrime };
