--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -47,21 +47,21 @@ namespace flexiblesusy {
 
 @ModelName@_high_scale_constraint<Two_scale>::@ModelName@_high_scale_constraint()
    : Constraint<Two_scale>()
+   , scale(0.)
+   , initial_scale_guess(0.)
    , fixed_scale(0.)
    , model(0)
    , inputPars()
 {
-@scaleGuess@
-   scale = initial_scale_guess;
 }
 
 @ModelName@_high_scale_constraint<Two_scale>::@ModelName@_high_scale_constraint(const @ModelName@_input_parameters& inputPars_)
    : Constraint<Two_scale>()
+   , fixed_scale(0.)
    , model(0)
    , inputPars(inputPars_)
 {
-@scaleGuess@
-   scale = initial_scale_guess;
+   initialize();
 }
 
 @ModelName@_high_scale_constraint<Two_scale>::~@ModelName@_high_scale_constraint()
@@ -125,11 +125,18 @@ void @ModelName@_high_scale_constraint<Two_scale>::set_scale(double s)
    fixed_scale = s;
 }
 
-void @ModelName@_high_scale_constraint<Two_scale>::reset()
+void @ModelName@_high_scale_constraint<Two_scale>::clear()
 {
-   scale = initial_scale_guess;
+   scale = 0.;
+   initial_scale_guess = 0.;
    fixed_scale = 0.;
    model = NULL;
+}
+
+void @ModelName@_high_scale_constraint<Two_scale>::initialize()
+{
+@scaleGuess@
+   scale = initial_scale_guess;
 }
 
 void @ModelName@_high_scale_constraint<Two_scale>::update_scale()
