--- a/templates/two_scale_susy_scale_constraint.hpp.in
+++ b/templates/two_scale_susy_scale_constraint.hpp.in
@@ -41,9 +41,11 @@ public:
    virtual void apply();
    virtual double get_scale() const;
    virtual void set_model(Two_scale_model*);
+
+   void clear();
    double get_initial_scale_guess() const;
+   void initialize();
    void set_input_parameters(const @ModelName@_input_parameters&);
-   void reset(); ///< reset to initial state
 
 private:
    double scale;
