--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -110,12 +110,15 @@ template <class T>
 void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
                                 const @ModelName@_input_parameters& input)
 {
-   high_scale_constraint.reset();
-   susy_scale_constraint.reset();
-   low_scale_constraint .reset();
+   high_scale_constraint.clear();
+   susy_scale_constraint.clear();
+   low_scale_constraint .clear();
    high_scale_constraint.set_input_parameters(input);
    susy_scale_constraint.set_input_parameters(input);
    low_scale_constraint .set_input_parameters(input);
+   high_scale_constraint.initialize();
+   susy_scale_constraint.initialize();
+   low_scale_constraint .initialize();
 
    if (!is_zero(input_scale))
       high_scale_constraint.set_scale(input_scale);
