--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -43,11 +43,13 @@ public:
    virtual void apply();
    virtual double get_scale() const;
    virtual void set_model(Two_scale_model*);
+
+   void clear();
    double get_initial_scale_guess() const;
+   void initialize();
    void set_input_parameters(const @ModelName@_input_parameters&);
    void set_sm_parameters(const QedQcd&);
    void set_threshold_corrections(unsigned); ///< diable/enable threshold corrections
-   void reset(); ///< reset to initial state
 
 private:
    double scale;
