--- a/templates/two_scale_susy_parameters.cpp.in
+++ b/templates/two_scale_susy_parameters.cpp.in
@@ -101,7 +101,7 @@ const @ModelName@_input_parameters& @ModelName@_susy_parameters::get_input() con
    return input;
 }
 
-void @ModelName@_susy_parameters::set_input(const @ModelName@_input_parameters& input_)
+void @ModelName@_susy_parameters::set_input_parameters(const @ModelName@_input_parameters& input_)
 {
    input = input_;
 }
