Workaround for the Weinberg angle in the MRSSM in SARAH 4.2.2
SARAH 4.2.2 defines Weinberg angle as

  {ThetaW, { Description -> "Weinberg-Angle",
             DependenceNum -> None,
             Value -> 0.511621}},

However, we currently need its analytic expression in terms of MW and
MZ.  This workaround puts the analytic expression back into
SARAH`ParameterDefinitions.

--- a/model_files/MRSSM/FlexibleSUSY.m.in
+++ b/model_files/MRSSM/FlexibleSUSY.m.in
@@ -38,3 +38,19 @@ InitialGuessAtLowScale = {
 OnlyLowEnergyFlexibleSUSY = True;
 
 PotentialLSPParticles = { Chi, Su, Sd, Se, Cha1, Cha2 };
+
+(* Workaround:  SARAH 4.2.2 defines Weinberg angle as
+
+     {ThetaW, { Description -> "Weinberg-Angle",
+                DependenceNum -> None,
+                Value -> 0.511621}},
+
+   However, we currently need its analytic expression in terms
+   of MW and MZ.
+ *)
+SARAH`ParameterDefinitions = Append[
+    Cases[SARAH`ParameterDefinitions, {p_ /; p =!= SARAH`ThetaW, ___}],
+    {SARAH`ThetaW,
+     { Description -> "Weinberg-Angle",
+       DependenceNum -> ArcSin[Sqrt[1 - (Mass[VWm]^2 - g2^2*vT^2)/Mass[VZ]^2]]}}
+];
