add newton to list of root finders
I found that when scanning over tan(beta) in the MSSM some points are
invalid due to "no ewsb" errors.  It seems that both
gsl_multiroot_fsolver_hybrid and gsl_multiroot_fsolver_hybrids can
sometimes not find a solution with the required precision.  But when I
add Newton's method some more points work!

Example point which fails with gsl_multiroot_fsolver_hybrid and
gsl_multiroot_fsolver_hybrids, but works with
gsl_multiroot_fsolver_dnewton :

Block MODSEL                 # Select model
    1    1                   # mSUGRA
    3    0                   # MSSM
Block FlexibleSUSY
    0   1.000000000e-04      # precision goal
    1   0                    # max. iterations (0 = automatic)
    2   0                    # algorithm (0 = two_scale, 1 = lattice)
    3   0                    # calculate SM pole masses
    4   2                    # pole mass loop order
    5   2                    # EWSB loop order
    6   2                    # beta-functions loop order
    7   1                    # threshold corrections (0 = disabled, 1 = enabled)
Block SMINPUTS               # Standard Model inputs
    1   1.279340000e+02      # alpha^(-1) SM MSbar(MZ)
    2   1.166370000e-05      # G_Fermi
    3   1.176000000e-01      # alpha_s(MZ) SM MSbar
    4   9.118760000e+01      # MZ(pole)
    5   4.200000000e+00      # mb(mb) SM MSbar
    6   1.733000000e+02      # mtop(pole)
    7   1.777000000e+00      # mtau(pole)
    8   0.000000000e+00      # mnu3(pole)
   11   5.109989020e-04      # melectron(pole)
   12   0.000000000e+00      # mnu1(pole)
   13   1.056583570e-01      # mmuon(pole)
   14   0.000000000e+00      # mnu2(pole)
   21   4.750000000e-03      # md(2 GeV)
   22   2.400000000e-03      # mu(2 GeV)
   23   1.040000000e-01      # ms(2 GeV)
   24   1.270000000e+00      # mc(2 GeV)
Block MINPAR                 # Input parameters
    1   5000.                # m0
    2   5000.                # m12
    3   22.45                # TanBeta
  

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -181,7 +181,8 @@ int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* 
 int CLASSNAME::solve_ewsb_iteratively()
 {
    const gsl_multiroot_fsolver_type* solvers[] =
-      {gsl_multiroot_fsolver_hybrid, gsl_multiroot_fsolver_hybrids};
+      {gsl_multiroot_fsolver_hybrid, gsl_multiroot_fsolver_hybrids,
+       gsl_multiroot_fsolver_dnewton};
 
    double x_init[number_of_ewsb_equations];
    ewsb_initial_guess(x_init);
