--- a/model_files/FlexibleSUSY.m.in
+++ b/model_files/FlexibleSUSY.m.in
@@ -64,3 +64,8 @@ InitialGuessAtHighScale = {};
 UseHiggs2LoopMSSM = False;
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
