--- a/model_files/SMSSM/FlexibleSUSY.m.in
+++ b/model_files/SMSSM/FlexibleSUSY.m.in
@@ -134,3 +134,8 @@ UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Mu] + \[Lambda] vS / Sqrt[2];
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
