--- a/model_files/MRSSM/FlexibleSUSY.m.in
+++ b/model_files/MRSSM/FlexibleSUSY.m.in
@@ -1,5 +1,6 @@
 
 FSModelName = "@CLASSNAME@";
+FSEigenstates = SARAH`EWSB;
 
 (* MRSSM input parameters *)
 
@@ -38,6 +39,11 @@ InitialGuessAtLowScale = {
 OnlyLowEnergyFlexibleSUSY = True;
 
 PotentialLSPParticles = { Chi, Su, Sd, Se, Cha1, Cha2 };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
 
 (* Workaround:  SARAH 4.2.2 defines Weinberg angle as
 
