--- a/model_files/MSSMRHN/FlexibleSUSY.m.in
+++ b/model_files/MSSMRHN/FlexibleSUSY.m.in
@@ -1,5 +1,6 @@
 
 FSModelName = "@CLASSNAME@";
+FSEigenstates = SARAH`EWSB;
 
 (* CMSSMRHN input parameters *)
 
@@ -67,3 +68,8 @@ InitialGuessAtHighScale = {
    {\[Mu]   , 1.0},
    {B[\[Mu]], 0.0}
 };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
