--- a/model_files/NUHMSSM/FlexibleSUSY.m.in
+++ b/model_files/NUHMSSM/FlexibleSUSY.m.in
@@ -1,5 +1,6 @@
 
 FSModelName = "@CLASSNAME@";
+FSEigenstates = SARAH`EWSB;
 
 (* input parameters *)
 
@@ -72,3 +73,8 @@ UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {hh, Ah, Hpm};
+MediumPoleMassPrecision  = {};
+LowPoleMassPrecision     = {};
