--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -20,6 +20,4 @@ Print["Starting model: ", ToString[HoldForm[Start["@ModelName@"@SubModel@]]]];
 
 Start["@ModelName@"@SubModel@];
 
-MakeFlexibleSUSY[Eigenstates -> SARAH`EWSB,
-                 InputFile -> FileNameJoin[{"@DIR@","FlexibleSUSY.m"}]
-                ];
+MakeFlexibleSUSY[InputFile -> FileNameJoin[{"@DIR@","FlexibleSUSY.m"}]];
