--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -180,9 +180,9 @@ int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* 
 
 int CLASSNAME::solve_ewsb_iteratively()
 {
-   const gsl_multiroot_fsolver_type* solvers[] =
-      {gsl_multiroot_fsolver_hybrid, gsl_multiroot_fsolver_hybrids,
-       gsl_multiroot_fsolver_broyden};
+   const gsl_multiroot_fsolver_type* solvers[] = {
+@gslEWSBRootFinders@
+   };
 
    double x_init[number_of_ewsb_equations];
    ewsb_initial_guess(x_init);
