added PotentialLSPParticles to E6SSMnew FlexibleSUSY model file.

--- a/model_files/E6SSMnew/FlexibleSUSY.m.in
+++ b/model_files/E6SSMnew/FlexibleSUSY.m.in
@@ -98,6 +98,9 @@ InitialGuessAtHighScale = {};
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda] vs / Sqrt[2];
 
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
+
+
 DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh, Ah, Hpm};
 MediumPoleMassPrecision  = {};
