--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -220,7 +220,6 @@ tag:
 	git tag $(FLEXIBLESUSY_TAG)
 
 release:
-	git archive --worktree-attributes --format=tar \
-		--prefix=$(FLEXIBLESUSY_PKG)/ \
-		$(FLEXIBLESUSY_TAG) | gzip > $(FLEXIBLESUSY_PKG).tar.gz
+	git archive --worktree-attributes --prefix=$(FLEXIBLESUSY_PKG)/ \
+		--output=$(FLEXIBLESUSY_PKG).tar.gz $(FLEXIBLESUSY_TAG)
 	md5sum $(FLEXIBLESUSY_PKG).tar.gz > $(FLEXIBLESUSY_PKG).tar.gz.md5
