--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -223,3 +223,8 @@ release:
 	git archive --worktree-attributes --prefix=$(FLEXIBLESUSY_PKG)/ \
 		--output=$(FLEXIBLESUSY_PKG).tar.gz $(FLEXIBLESUSY_TAG)
 	md5sum $(FLEXIBLESUSY_PKG).tar.gz > $(FLEXIBLESUSY_PKG).tar.gz.md5
+
+release-head:
+	git archive --worktree-attributes --prefix=$(PKGNAME)/ \
+		--output=$(PKGNAME).tar.gz HEAD
+	md5sum $(PKGNAME).tar.gz > $(PKGNAME).tar.gz.md5
