--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -11,6 +11,9 @@ SARAH_MODEL  := @MODEL@
 		$(DIR)/two_scale_susy.mk \
 		$(DIR)/two_scale_soft.mk
 
+@CLASSNAME@_SLHA_INPUT := \
+@SLHA_INPUT@
+
 @CLASSNAME@_GNUPLOT := \
 		$(DIR)/@CLASSNAME@_plot_rgflow.gnuplot \
 		$(DIR)/@CLASSNAME@_plot_spectrum.gnuplot
@@ -130,6 +133,9 @@ install-src::
 		install -m u=rw,g=r,o=r $(EXE@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
 		$(INSTALL_STRIPPED) $(@CLASSNAME@_MK) $(@CLASSNAME@_INSTALL_DIR) -m u=rw,g=r,o=r
 		install -m u=rw,g=r,o=r $(@CLASSNAME@_TWO_SCALE_MK) $(@CLASSNAME@_INSTALL_DIR)
+ifneq ($(@CLASSNAME@_SLHA_INPUT),)
+		install -m u=rw,g=r,o=r $(@CLASSNAME@_SLHA_INPUT) $(@CLASSNAME@_INSTALL_DIR)
+endif
 		install -m u=rw,g=r,o=r $(@CLASSNAME@_GNUPLOT) $(@CLASSNAME@_INSTALL_DIR)
 endif
 
