attempt to fix bug in calculate_spectrum. currently if loop_order for pole masses is zero then the DRbar masses are copied to pole masses *before* they are reordered.  in this fix the reordering comes first.

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -387,11 +387,12 @@ void CLASSNAME::calculate_spectrum()
    calculate_DRbar_parameters();
    if (pole_mass_loop_order > 0)
       calculate_pole_masses();
-   else
-      copy_DRbar_masses_to_pole_masses();
 
    // move goldstone bosons to the front
    reorder_DRbar_masses();
+   if (pole_mass_loop_order == 0)
+      copy_DRbar_masses_to_pole_masses();
+
    if (pole_mass_loop_order > 0)
       reorder_pole_masses();
 
