--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -152,14 +152,24 @@ void @ModelName@_slha_io::fill_flexiblesusy_tuple(Spectrum_generator_settings& s
    }
 }
 
+/**
+ * Reads the renormalization scales from all DR-bar parameter blocks.
+ * If blocks with different scales are found the last scale is
+ * returned and a warning is printed.
+ *
+ * @return common renormalization scale
+ */
 double @ModelName@_slha_io::read_scale() const
 {
    double scale = 0.;
 
    for (unsigned i = 0; i < NUMBER_OF_DRBAR_BLOCKS; i++) {
       const double block_scale = slha_io.read_scale(drbar_blocks[i]);
-      if (!is_zero(block_scale))
+      if (!is_zero(block_scale)) {
+         if (!is_zero(scale) && !is_equal(scale, block_scale))
+            WARNING("DR-bar parameters defined at different scales");
          scale = block_scale;
+      }
    }
 
    return scale;
