--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -63,9 +63,11 @@ public:
    void set_number_of_ewsb_iterations(std::size_t);
    void set_number_of_mass_iterations(std::size_t);
    void set_pole_mass_loop_order(unsigned);
+   void set_physical(const @ModelName@_physical&);
    double get_ewsb_iteration_precision() const;
    double get_ewsb_loop_order() const;
    const @ModelName@_physical& get_physical() const;
+   @ModelName@_physical& get_physical();
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& get_problems() const;
    Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& get_problems();
    int solve_ewsb_tree_level();
