--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -15,7 +15,11 @@
 // along with FlexibleSUSY.  If not, see
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
-
+/**
+ * @file @ModelName@_two_scale_model.cpp
+ * @brief contains methods to solve EWSB and calculate pole masses and 
+ *        mixings from DRbar parameters.
+ */
 // File generated at @DateAndTime@
 
 #include "@ModelName@_two_scale_model.hpp"
@@ -157,7 +161,10 @@ Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& CLASSNAME::get_problems()
 {
    return problems;
 }
-
+/**
+ * method which fills tadpoles at loop order specified by  
+ * the parameter classes of the generated models.
+ */
 int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* f)
 {
    if (contains_nan(x, number_of_ewsb_equations)) {
@@ -188,6 +195,11 @@ int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* 
    return GSL_SUCCESS;
 }
 
+/**
+ * method which solves the EWSB conditions iteratively, trying gsl root   
+ * finding methods gsl_multiroot_fsolver_hybrid, gsl_multiroot_fsolver_hybrids,
+ * and gsl_multiroot_fsolver_broyden in that order until a solution is found.
+ */
 int CLASSNAME::solve_ewsb_iteratively()
 {
    const gsl_multiroot_fsolver_type* solvers[] = {
@@ -244,6 +256,7 @@ int CLASSNAME::solve_ewsb_iteratively(unsigned loop_order)
    ewsb_loop_order = old_loop_order;
    return status;
 }
+
 
 int CLASSNAME::solve_ewsb_tree_level()
 {
@@ -313,6 +326,9 @@ void CLASSNAME::print(std::ostream& ostr) const
 @printMixingMatrices@
    physical.print(ostr);
 }
+/**
+ * wrapper routines for passarino Veltman functions
+ */
 
 double CLASSNAME::A0(double m) const
 {
@@ -354,6 +370,9 @@ double CLASSNAME::G0(double p, double m1, double m2) const
    return passarino_veltman::ReG0(p*p, m1*m1, m2*m2, Sqr(get_scale()));
 }
 
+/**
+ * routine which finds the DRbar mass eigenstates and mixings.
+ */
 void CLASSNAME::calculate_DRbar_parameters()
 {
 @saveSoftHiggsMasses@
@@ -362,7 +381,9 @@ void CLASSNAME::calculate_DRbar_parameters()
 @calculateAllMasses@
 @restoreSoftHiggsMasses@
 }
-
+/**
+ * routine which finds the pole mass eigenstates and mixings.
+ */
 void CLASSNAME::calculate_pole_masses()
 {
 #ifdef ENABLE_THREADS
@@ -382,16 +403,30 @@ void CLASSNAME::copy_DRbar_masses_to_pole_masses()
 @copyDRbarMassesToPoleMasses@
 }
 
+/**
+ * reorders DRbar masses so that golstones are placed at the index
+ * specified in the model files definition of the associuated
+ * gauge boson (see Z-boson definition in default particles.m file
+ * in the Models directory of your SARAH distribution for example)
+ */
 void CLASSNAME::reorder_DRbar_masses()
 {
 @reorderDRbarMasses@
 }
-
+/**
+ * reorders pole masses so that golstones are placed at the index
+ * specified in the model files definition of the associuated
+ * gauge boson (see Z-boson definition in default particles.m file
+ * in the Models directory of your SARAH distribution for example)
+ */
 void CLASSNAME::reorder_pole_masses()
 {
 @reorderPoleMasses@
 }
-
+/**
+ * calculates spectrum for model once the DRbar parameters at  
+ * at low energies are known
+ */
 void CLASSNAME::calculate_spectrum()
 {
    calculate_DRbar_parameters();
@@ -436,7 +471,9 @@ void CLASSNAME::run_to(double scale, double eps)
       eps = precision;
    @ModelName@_soft_parameters::run_to(scale, eps);
 }
-
+/**
+ * finds the lsp and returns it's mass
+ */
 @lspFunctions@
 
 @massCalculationFunctions@
