--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -161,9 +161,16 @@ Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& CLASSNAME::get_problems()
 {
    return problems;
 }
+
 /**
- * method which fills tadpoles at loop order specified by  
- * the parameter classes of the generated models.
+ * Method which calculates the tadpoles at loop order specified in the
+ * pointer to the CLASSNAME::Ewsb_parameters struct.
+ *
+ * @param x GSL vector of EWSB output parameters
+ * @param params pointer to CLASSNAME::Ewsb_parameters struct
+ * @param f GSL vector with tadpoles
+ *
+ * @return GSL_EDOM if x contains Nans, GSL_SUCCESS otherwise.
  */
 int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* f)
 {
@@ -382,6 +389,7 @@ void CLASSNAME::calculate_DRbar_parameters()
 @calculateAllMasses@
 @restoreSoftHiggsMasses@
 }
+
 /**
  * routine which finds the pole mass eigenstates and mixings.
  */
@@ -414,6 +422,7 @@ void CLASSNAME::reorder_DRbar_masses()
 {
 @reorderDRbarMasses@
 }
+
 /**
  * reorders pole masses so that golstones are placed at the index
  * specified in the model files definition of the associuated
@@ -425,7 +434,7 @@ void CLASSNAME::reorder_pole_masses()
 @reorderPoleMasses@
 }
 /**
- * calculates spectrum for model once the DRbar parameters at  
+ * calculates spectrum for model once the DRbar parameters at
  * at low energies are known
  */
 void CLASSNAME::calculate_spectrum()
