--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -79,6 +79,9 @@ ALLTST   :=
 # flexiblesusy-config script
 FSCONFIG := @FSCONFIG@
 
+# configure script
+CONFIGURE_SCRIPT := $(ABSBASEDIR)/configure
+
 # script which lists the SARAH model files
 SARAH_DEP_GEN := @SARAH_DEP_GEN@
 
@@ -106,7 +109,7 @@ install-src::
 else
 install-src::
 	install -d $(INSTALL_DIR)
-	$(INSTALL_STRIPPED) $(ABSBASEDIR)/configure $(INSTALL_DIR)/configure -m u=rwx,g=r,o=r
+	$(INSTALL_STRIPPED) $(CONFIGURE_SCRIPT) $(INSTALL_DIR)/configure -m u=rwx,g=r,o=r
 	$(INSTALL_STRIPPED) $(README_FILE) $(INSTALL_DIR)/README -m u=rw,g=r,o=r
 
 ifeq ($(ENABLE_META),yes)
