--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -107,6 +107,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    low_scale_constraint .clear();
    susy_scale_constraint.set_input_parameters(input);
    low_scale_constraint .set_input_parameters(input);
+   low_scale_constraint .set_sm_parameters(oneset);
    susy_scale_constraint.initialize();
    low_scale_constraint .initialize();
 
